--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,16 @@ packages = [{ include = "todo_ca" }]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+fastapi = "^0.70.1"
+uvicorn = "^0.16.0"
+requests = "^2.27.0"
 
 [tool.poetry.dev-dependencies]
+pytest = "^6.2.5"
+pytest-cov = "^3.0.0"
+pytest-watch = "^4.2.0"
+pytest-mock = "^3.6.1"
+black = "^21.12b0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
